feat(tour): added tournament history page :D
